--- a/admin/index.html
+++ b/admin/index.html
@@ -151,7 +151,7 @@
 
       function checkAdminAndRender(token) {
         $.ajax({
-          url: "http://54.79.120.182:8080/api/auth/is-admin",
+          url: "https://netlab.kr/api/auth/is-admin",
           method: "GET",
           headers: { "Authorization": "Bearer " + token },
           success: function (isAdmin) {
@@ -172,7 +172,7 @@
         checkAdminAndRender(accessToken);
       } else if (refreshToken) {
         $.ajax({
-          url: 'http://54.79.120.182:8080/api/auth/refresh',
+          url: 'https://netlab.kr/api/auth/refresh',
           method: 'POST',
           contentType: 'application/json',
           data: JSON.stringify({ refreshToken }),
