--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   
       function checkAdminAndRender(token, name) {
         $.ajax({
-          url: "http://54.79.120.182:8080/api/auth/is-admin",
+          url: "https://netlab.kr/api/auth/is-admin",
           method: "GET",
           headers: { "Authorization": "Bearer " + token },
           success: function (isAdmin) { renderNav(isAdmin, name); },
@@ -169,7 +169,7 @@
         checkAdminAndRender(accessToken, getNameFromStorage());
       } else if (refreshToken) {
         $.ajax({
-          url: 'http://54.79.120.182:8080/api/auth/refresh',
+          url: 'https://netlab.kr/api/auth/refresh',
           method: 'POST',
           contentType: 'application/json',
           data: JSON.stringify({ refreshToken }),
