--- a/login/login.html
+++ b/login/login.html
@@ -160,7 +160,7 @@
       }
       function checkAdminAndRender(token) {
         $.ajax({
-          url: "http://54.79.120.182:8080/api/auth/is-admin",
+          url: "https://netlab.kr/api/auth/is-admin",
           method: "GET",
           headers: { "Authorization": "Bearer " + token },
           success: function () { renderNav(); },
@@ -171,7 +171,7 @@
         checkAdminAndRender(accessToken);
       } else if (refreshToken) {
         $.ajax({
-          url: 'http://54.79.120.182:8080/api/auth/refresh',
+          url: 'https://netlab.kr/api/auth/refresh',
           method: 'POST',
           contentType: 'application/json',
           data: JSON.stringify({ refreshToken }),
@@ -202,7 +202,7 @@
           return alert('아이디와 비밀번호를 입력하세요.');
         }
         $.ajax({
-          url: 'http://54.79.120.182:8080/api/auth/login',
+          url: 'https://netlab.kr/api/auth/login',
           method: 'POST',
           contentType: 'application/json',
           data: JSON.stringify({ userId, password }),
