--- a/login/signUp.html
+++ b/login/signUp.html
@@ -184,7 +184,7 @@
       }
 
       $.ajax({
-        url: 'http://54.79.120.182:8080/api/auth/signup',
+        url: 'https://netlab.kr/api/auth/signup',
         type: 'POST',
         contentType: 'application/json',
         data: JSON.stringify({ userId, password, name }),
