--- a/community/add_question.html
+++ b/community/add_question.html
@@ -2,133 +2,268 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>게시글 등록</title>
-  <link rel="stylesheet" href="../assets/css/style.css" />
+  <title>질문 게시글 등록</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style>
+    * { box-sizing: border-box; }
     body {
       font-family: 'Pretendard', sans-serif;
-      background-color: #f4f7f9;
       margin: 0;
-      padding: 0;
+      background: #f8fafb;
     }
-
-    .container {
-      max-width: 600px;
-      margin: 100px auto;
-      background: #fff;
-      border-radius: 15px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      padding: 40px 30px;
-    }
-
-    h2 {
-      text-align: center;
-      color: #3DAEFA;
-      margin-bottom: 30px;
-    }
-
-    .radio-group {
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      margin-bottom: 25px;
-    }
-
-    .radio-group label {
+    .navbar {
+      position: fixed;
+      top: 0; left: 0; width: 100%;
+      background: #3DAEFA;
+      padding: 0 36px;
+      height: 64px;
       display: flex;
       align-items: center;
+      justify-content: space-between;
+      z-index: 1000;
+      box-shadow: 0 4px 16px rgba(61, 174, 250, 0.06);
+    }
+    .navbar .welcome:hover { opacity: 0.85; }
+    .navbar .welcome a {
+      color: #fff;
+      font-size: 22px;
+      font-weight: 700;
+      text-decoration: none;
+      letter-spacing: 0.5px;
+      text-shadow: 0 1px 2px #36a6ee44;
+    }
+    .navbar #nav-links a {
+      color: #fff;
+      text-decoration: none;
+      margin-left: 26px;
       font-size: 16px;
       font-weight: 500;
-      cursor: pointer;
+      padding: 8px 14px;
+      border-radius: 7px;
+      background: transparent;
+      transition: background 0.16s;
     }
-
-    .radio-group input[type="radio"] {
-      margin-right: 8px;
-      accent-color: #3DAEFA;
-    }
-
-    input[type="text"],
-    textarea {
-      width: 100%;
-      padding: 14px;
-      margin-bottom: 20px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 15px;
-    }
-
-    textarea {
-      height: 180px;
-      resize: none;
-    }
-
-    button {
-      width: 100%;
-      background-color: #3DAEFA;
-      border: none;
-      padding: 14px;
-      color: white;
-      font-size: 16px;
+    .navbar #nav-links a:hover { background: #379fde; }
+    .navbar #user-name {
+      color: #fff;
       font-weight: 600;
+      margin-left: 18px;
+      font-size: 16px;
+      white-space: nowrap;
+    }
+    .container {
+      max-width: 600px;
+      background: #fff;
+      padding: 44px 38px 36px 38px;
+      border-radius: 16px;
+      box-shadow: 0 10px 32px rgba(61, 174, 250, 0.08);
+      margin: 110px auto 0 auto;
+      text-align: center;
+    }
+    h1 {
+      margin-bottom: 32px;
+      font-size: 25px;
+      color: #3DAEFA;
+      font-weight: 700;
+    }
+    .post-type-btns {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 26px;
+      gap: 12px;
+    }
+    .post-type-btns label {
+      padding: 8px 18px;
+      border: 1.5px solid #d2e5f9;
+      border-radius: 8px;
+      background: #f0f7ff;
+      color: #444;
+      font-weight: 500;
+      cursor: pointer;
+      transition: 0.15s;
+    }
+    .post-type-btns label:hover {
+      background: #e2f2fd;
+      border-color: #3DAEFA;
+    }
+    .post-type-btns input[type="radio"] {
+      display: none;
+    }
+    .post-type-btns input[type="radio"]:checked + span {
+      background: #3DAEFA;
+      color: #fff;
+      border-color: #3DAEFA;
+    }
+    input, textarea {
+      width: 100%;
+      padding: 13px;
+      margin-bottom: 22px;
+      font-family: 'Pretendard', monospace;
+      font-size: 16px;
+      border-radius: 10px;
+      border: 1.5px solid #d2e5f9;
+      background: #f6fafd;
+      outline: none;
+      transition: border 0.15s;
+      color: #222;
+      box-sizing: border-box;
+    }
+    input:focus, textarea:focus {
+      border: 1.5px solid #3DAEFA;
+      background: #f4faff;
+    }
+    textarea { height: 140px; resize: vertical; }
+    button {
+      padding: 13px 38px;
+      background: #3DAEFA;
+      color: #fff;
+      border: none;
       border-radius: 8px;
       cursor: pointer;
-      transition: background-color 0.3s ease;
+      font-size: 17px;
+      font-weight: bold;
+      transition: background 0.18s;
+      box-shadow: 0 2px 8px #3daefa18;
+      margin-top: 2px;
     }
-
-    button:hover {
-      background-color: #3093d1;
-    }
+    button:hover { background: #3499d6; }
   </style>
 </head>
 <body>
-
-  <div class="container">
-    <h2>게시글 등록</h2>
-
-    <div class="radio-group">
-      <label><input type="radio" name="postType" value="GENERAL" checked /> 일반 글</label>
-      <label><input type="radio" name="postType" value="NOTICE" /> 공지사항</label>
+  <div class="navbar">
+    <div class="welcome"><a href="/index.html">NetLab</a></div>
+    <div style="display:flex; align-items:center;">
+      <div id="nav-links"></div>
+      <div id="user-name"></div>
     </div>
-
-    <input type="text" id="title" placeholder="제목을 입력하세요." />
+  </div>
+  <div class="container">
+    <h1>게시글 등록</h1>
+    <div id="postTypeGroup" style="display:none;">
+      <div class="post-type-btns">
+        <label>
+          <input type="radio" name="postType" value="question" checked />
+          <span>일반 글</span>
+        </label>
+        <label>
+          <input type="radio" name="postType" value="notice" />
+          <span>공지사항</span>
+        </label>
+      </div>
+    </div>
+    <input type="text" id="title" placeholder="제목을 입력하세요.">
     <textarea id="content" placeholder="질문 내용을 입력하세요."></textarea>
     <button id="submitBtn">등록하기</button>
   </div>
 
   <script>
-    $('#submitBtn').click(function () {
+    $(document).ready(function () {
       const token = localStorage.getItem('token');
-      const type = $('input[name="postType"]:checked').val();
-      const title = $('#title').val();
-      const content = $('#content').val();
+      const refreshToken = localStorage.getItem('refreshToken');
+      const nav = $('#nav-links');
+      const userNameDiv = $('#user-name');
+      const name = localStorage.getItem('name');
+      let isAdmin = false;
 
-      const dto = {
-        title,
-        content
-      };
-
-      const endpoint = type === 'NOTICE' 
-        ? 'https://be.netlab.kr/api/admin/notices' 
-        : 'https://be.netlab.kr/api/questions';
-
-      $.ajax({
-        url: endpoint,
-        method: 'POST',
-        contentType: 'application/json',
-        data: JSON.stringify(dto),
-        headers: {
-          'Authorization': 'Bearer ' + token
-        },
-        success: function () {
-          alert('게시글이 등록되었습니다.');
-          location.href = '/community.html';
-        },
-        error: function () {
-          alert('등록에 실패했습니다.');
+      function renderNav(loggedIn) {
+        if (loggedIn) {
+          nav.html(`
+            <a href="/index.html">홈</a>
+            <a href="/problems/list.html">문제목록</a>
+            <a href="/community/community.html">커뮤니티</a>
+            <a href="#" id="logoutBtn">로그아웃</a>
+          `);
+          userNameDiv.text(name || '');
+          userNameDiv.show();
+        } else {
+          nav.html(`
+            <a href="/index.html">홈</a>
+            <a href="/problems/list.html">문제목록</a>
+            <a href="/community/community.html">커뮤니티</a>
+            <a href="/login/login.html">로그인</a>
+            <a href="/login/signUp.html">회원가입</a>
+          `);
+          userNameDiv.hide();
         }
+      }
+
+      function checkAdmin(token, cb) {
+        $.ajax({
+          url: 'https://be.netlab.kr/api/auth/is-admin',
+          method: 'GET',
+          headers: { 'Authorization': 'Bearer ' + token },
+          success: function (res) {
+            isAdmin = res === true;
+            if (isAdmin) $('#postTypeGroup').show();
+            cb();
+          },
+          error: function () { cb(); }
+        });
+      }
+
+      if (token) checkAdmin(token, () => renderNav(true));
+      else renderNav(false);
+
+      $(document).on('click', '#logoutBtn', function () {
+        localStorage.clear();
+        alert('로그아웃 되었습니다');
+        location.href = '/index.html';
+      });
+
+      $('#submitBtn').click(function () {
+        const title = $('#title').val().trim();
+        const content = $('#content').val().trim();
+        const postType = $('input[name="postType"]:checked').val();
+
+        if (!title || !content) {
+          alert('제목과 내용을 모두 입력해주세요.');
+          return;
+        }
+
+        function registerQuestion(title, content, token, retry) {
+          const url = postType === 'notice'
+            ? 'https://be.netlab.kr/api/admin/notices'
+            : 'https://be.netlab.kr/api/questions';
+
+          $.ajax({
+            url: url,
+            method: 'POST',
+            contentType: 'application/json',
+            headers: token ? { 'Authorization': 'Bearer ' + token } : {},
+            data: JSON.stringify({ title, content }),
+            success: function () {
+              alert(postType === 'notice' ? '공지사항이 등록되었습니다!' : '질문이 등록되었습니다!');
+              window.location.href = '/community/community.html';
+            },
+            error: function (xhr) {
+              if (xhr.status === 401 && refreshToken && !retry) {
+                $.ajax({
+                  url: 'https://be.netlab.kr/api/auth/refresh',
+                  method: 'POST',
+                  contentType: 'application/json',
+                  data: JSON.stringify({ refreshToken }),
+                  success: function (res) {
+                    localStorage.setItem('token', res.accessToken);
+                    localStorage.setItem('refreshToken', res.refreshToken);
+                    registerQuestion(title, content, res.accessToken, true);
+                  },
+                  error: function () {
+                    localStorage.clear();
+                    alert('로그인 세션이 만료되었습니다. 다시 로그인해주세요.');
+                    window.location.href = "/login/login.html";
+                  }
+                });
+              } else {
+                alert('등록 실패: ' + (xhr.responseText || xhr.statusText));
+              }
+            }
+          });
+        }
+
+        registerQuestion(title, content, token, false);
       });
     });
   </script>
-
 </body>
 </html>
