--- a/admin/edit_problems/edit_problems.html
+++ b/admin/edit_problems/edit_problems.html
@@ -5,7 +5,7 @@
   <title>문제 수정</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <link rel="stylesheet" href="./admin_assets/css/edit_problems.css">
+  <link rel="stylesheet" href="../admin_assets/css/edit_problems.css">
 
 </head>
 <body>
