--- a/admin/submissions/submissions.html
+++ b/admin/submissions/submissions.html
@@ -5,61 +5,8 @@
   <title>제출 내역</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <style>
-    * { box-sizing: border-box; }
-    body {
-      font-family: 'Pretendard', sans-serif;
-      margin: 0;
-      background: #f8fafb;
-    }
-    .navbar {
-      position: fixed;
-      top: 0; left: 0; width: 100%;
-      background: #3DAEFA;
-      padding: 0 36px;
-      height: 64px;
-      display: flex; align-items: center; justify-content: space-between;
-      z-index: 1000;
-      box-shadow: 0 4px 16px rgba(61, 174, 250, 0.06);
-    }
-    .navbar .welcome a {
-      color: #fff; font-size: 18px; font-weight: 600; text-decoration: none;
-      letter-spacing: 0.2px; display: flex; align-items: center;
-      transition: opacity 0.2s; gap: 4px;
-    }
-    .navbar .welcome a:hover {
-      opacity: 0.85; text-decoration: underline;
-    }
-    .navbar #nav-links a {
-      color: #fff; text-decoration: none; margin-left: 26px; font-size: 16px;
-      font-weight: 500; padding: 8px 14px; border-radius: 7px; background: transparent;
-      transition: background 0.16s;
-    }
-    .navbar #nav-links a:hover { background: #379fde; }
-    .container {
-      max-width: 700px; margin: 110px auto 0 auto; padding: 38px 30px 34px 30px;
-      background: #fff; border-radius: 16px;
-      box-shadow: 0 10px 32px rgba(61, 174, 250, 0.08);
-    }
-    h1 {
-      font-size: 25px; margin-bottom: 32px; color: #3DAEFA; font-weight: 700; text-align: center;
-    }
-    ul#submissionList {
-      list-style: none; padding: 0; margin: 0;
-    }
-    ul#submissionList li {
-      background: #f6fafd; margin-bottom: 18px; padding: 17px 18px; border-radius: 12px;
-      font-size: 16px; box-shadow: 0 2px 8px #3daefa0b; border: 1.5px solid #d2e5f9;
-      display: flex; flex-direction: column; gap: 3px; color: #23272f;
-    }
-    ul#submissionList li span { font-weight: 500; color: #2563eb; }
-    @media (max-width: 700px) {
-      .navbar { padding: 0 12px; height: 54px;}
-      .navbar .welcome a { font-size: 15px;}
-      .container { padding: 18px 6vw; margin-top: 80px;}
-      ul#submissionList li { padding: 10px 6vw; font-size: 14px;}
-    }
-  </style>
+  <link rel="stylesheet" href="../admin_assets/css/submissions.css">
+
 </head>
 <body>
   <div class="navbar">
