--- a/problems/list.html
+++ b/problems/list.html
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8" />
   <title>문제 목록 - NetLab</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
+  <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- 여기서만 스타일을 로드 -->
   <link rel="stylesheet" href="../assets/css/list.css">
-  <style>
-    body { font-family: Pretendard, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji"; }
-    .navbar { display:flex; justify-content:space-between; align-items:center; padding:12px 16px; border-bottom:1px solid #eee; }
-    .navbar .brand { font-weight:700; text-decoration:none; color:#111; }
-    #nav-links a { margin-right:12px; text-decoration:none; color:#333; }
-    .user-info { margin-left:8px; color:#666; }
-    .container { max-width:900px; margin:24px auto; padding:0 16px; }
-    #problemList { list-style:none; padding:0; margin:0; }
-    #problemList li { border:1px solid #eee; border-radius:12px; padding:14px; margin-bottom:12px; cursor:pointer; transition:background .15s; }
-    #problemList li:hover { background:#fafafa; }
-    .tags { color:#666; font-size:14px; margin-top:4px; }
-  </style>
 </head>
+
 <body>
   <div class="navbar">
     <a href="/index.html" class="brand">NetLab</a>
-    <div style="display:flex; align-items:center;">
+    <div class="nav-right">
       <div id="nav-links"></div>
       <div class="user-info" id="user-info"></div>
     </div>
@@ -64,7 +56,7 @@
 
       // ---- 토큰 갱신 ----
       function refreshAndRender() {
-        if (!refreshToken) { renderNav(false); return; }
+        if (!refreshToken) { renderNav(!!token); return; }
         $.ajax({
           url: 'https://be.netlab.kr/api/auth/refresh',
           method: 'POST',
@@ -83,7 +75,6 @@
         });
       }
 
-      // 최초 네비 상태
       if (token) renderNav(true); else refreshAndRender();
 
       // ---- 로그아웃 ----
@@ -94,33 +85,33 @@
         location.href = '/index.html';
       });
 
-      // ---- 문제 목록 불러오기 ----
+      // ---- 문제 목록 ----
       $.ajax({
         url: 'https://be.netlab.kr/api/submit/problems',
         method: 'GET',
-        success: function(res) {
+        success: function (res) {
           const $list = $('#problemList').empty();
           res.forEach(p => {
-            // XSS 방지: text()로 채움
             const $li = $('<li class="problem-item">').attr('data-id', p.id);
-            $li.append($('<div>').append($('<strong>').text(`ID: ${p.id} - ${p.title} (${p.difficulty})`)));
+            $li.append($('<div class="title-line">')
+              .append($('<strong>').text(`ID: ${p.id} - ${p.title}`))
+              .append($('<span class="pill">').text(p.difficulty)));
+            if (p.description) $li.append($('<div class="description">').text(p.description));
             $li.append($('<div class="tags">').text(`태그: ${p.tags}`));
             $list.append($li);
           });
         },
-        error: function() {
-          alert('문제 목록을 불러오지 못했습니다.');
-        }
+        error: function () { alert('문제 목록을 불러오지 못했습니다.'); }
       });
 
-      // ---- 문제 클릭 → 확인 → 풀이 페이지로 이동 ----
+      // ---- 클릭 이동 ----
       $(document).on('click', '.problem-item', function () {
         const id = $(this).data('id');
         if (!confirm('문제를 풀러 가시겠습니까?')) return;
-        // 도착 페이지에서 id로 상세 API 호출해 “로딩 중…” 채우기
         location.href = `/views/index.html?id=${encodeURIComponent(id)}`;
       });
     });
   </script>
 </body>
+
 </html>
